--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pydantic-settings==2.10.1
 
 # Database & Cache  
 asyncpg==0.30.0
-pgvector>==0.8.0
+pgvector>=0.8.0
 redis==6.2.0
 alembic==1.13.1
 
@@ -31,6 +31,7 @@ slowapi==0.1.9
 circuitbreaker==2.1.3
 aiofiles==24.1.0
 httpx[http2]==0.28.1
+PyJWT[crypto]==2.9.0
 
 # Development
 pytest==8.3.2
